// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object metadata update should fail when labelIdentifier is not a TEXT or NAME field 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_OBJECT_INPUT",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "labelIdentifierFieldMetadataId validation failed: it must be a TEXT or FULL_NAME field metadata type id",
    "name": "UserInputError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a known field metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_OBJECT_INPUT",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "labelIdentifierFieldMetadataId validation failed: related field metadata not found",
    "name": "UserInputError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a uuid 1`] = `
[
  {
    "extensions": {
      "code": "GRAPHQL_VALIDATION_FAILED",
      "http": {
        "status": 400,
      },
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid UUID",
    "name": "ValidationError",
  },
]
`;
